# $Id: CHANGELOG,v 1.27 2003/10/02 12:54:23 jaco Exp $

* Thu, Oct 02, 2003, 0.5.6-cvs
  + Buchan Milne <bgmilne@cae.co.za>:
    [mklivecd]:
      - Fix rootdir to use the kernel/modules from the chroot
      - Add basic bootsplash support if bootsplash is installed
        on the image'd system (normal as well as chroot)
      - Avoid premature shell expansion polluting the exclude list
    [mklivecd.spec]:
      - Updated to allow for rpmbuild -ta <tarball> to work for
        a CVS snapshot generated via 'make dist'
  + Jaco Greeff <jaco@linuxminicd.org>:
    [FAQ]:
      - Updated to include some compression parameter
        statistics (describes mklivecd '--blocksize' and
        '--looptype' options)
      - Added an entry for the "keyb=<language>' isolinux boot
        option
      - Added an Q/A for the creation of LSS images as used by
        the 'mklivecd --iso-bgimage' command
    [Makefile]:
      - Combined piped sed commands into one
      - Removed non-existing busybox and cloop version
        replacements for specfile generation (legacy)
      - Distribute generated specfile by default in 'dist',
        instead of the previously included '.in' (This allows
        a build via the "rpmbuild -t[abs] mklivecd-<ver>.tar.bz2"
        command)
      - Ability to build CVS dist per date
      - Add RPM release information for spec file generation
      - Added 'make rpm' target for building both the noarch and
        src RPMS
      - Build all targets to DISTDIR
      - Split variables into Rules.mk
    [README]:
      - Include CVS location
    [hwdetect]:
      - Added support for USB devices, probing USB controllers to
        enable detection of attached devices
      - Try to auto-detect monitors via DDC, if not available or
        cannot be detected properly, fall back to a good default
        (1024x768). Thanks to Pixel <pixel@mandrakesoft.com> for
        pointers in this area.
      - Default keyboard to 'en_US'. (Specified in Rules.mk)